# LLVM

./: README.md  RUNME.txt
llvm-pass/examples/: example1.ll
llvm-pass/include/: AddConst.h  regionAnalysis.h
llvm-pass/lib/: AddConstAnalysis.cpp  AddConstPlugin.cpp  loopAnalysis.cpp  regionAnalysis.cpp
llvm-pass/my_proj/: CMakeLists.txt
llvm-pass/my_proj/lib/: AddConstPass.cpp  CMakeLists.txt
llvm-pass/my_proj/tool/: main.cpp
llvm-pass/tool/: CMakeLists.txt
